<resources>
    <string name="app_name">CalculationTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="high_score">High Score:%d</string>
    <string name="mouse_cal">Calculate Test</string>
    <string name="title_image" translatable="false">title.image</string>
    <string name="title_start_btn">Start</string>
    <string name="q_now_score">Score:%d</string>
    <string name="q_tv_num_1" translatable="false">19</string>
    <string name="q_tv_op_1" translatable="false">-</string>
    <string name="q_tv_num_2" translatable="false">16</string>
    <string name="q_tv_op_2" translatable="false">=</string>
    <string name="q_tv_answer" translatable="false">\?</string>
    <string name="q_tv_tips">Correct! Please Continue</string>
    <string name="q_btn_1" translatable="false">1</string>
    <string name="q_btn_2" translatable="false">2</string>
    <string name="q_btn_3" translatable="false">3</string>
    <string name="q_btn_4" translatable="false">4</string>
    <string name="q_btn_5" translatable="false">5</string>
    <string name="q_btn_6" translatable="false">6</string>
    <string name="q_btn_7" translatable="false">7</string>
    <string name="q_btn_8" translatable="false">8</string>
    <string name="q_btn_9" translatable="false">9</string>
    <string name="q_btn_0" translatable="false">0</string>
    <string name="q_btn_clear">C</string>
    <string name="q_btn_submit">Submit</string>
    <string name="lose_fail_msg">Challenge Fail!</string>
    <string name="challenge_score">Your Score:%d</string>
    <string name="challenge_back">Back</string>
    <string name="win_image" translatable="false">win image</string>
    <string name="lose_image" translatable="false">lose image</string>
    <string name="win_message">Challenge Success!</string>
    <string name="q_tv_u_answer">Your Answer :</string>
    <string name="quit_dialog_title">Are You Sure to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>
    <string name="fragment_nav_title">Calculator Test</string>
    <string name="fragment_nav_question">Question</string>
    <string name="fragment_nav_win">Win</string>
    <string name="fragment_nav_lose">Lose</string>
</resources>