<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.calculationtest.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment_win">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.v.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.v.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.h.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.h.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.h.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.h.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/win.gl.h.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91" />

        <ImageView
            android:id="@+id/win.iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/win_baseline_mood_24"
            android:contentDescription="@string/win_image"
            app:layout_constraintBottom_toTopOf="@+id/win.gl.h.2"
            app:layout_constraintEnd_toStartOf="@+id/win.gl.v.2"
            app:layout_constraintStart_toStartOf="@+id/win.gl.v.1"
            app:layout_constraintTop_toTopOf="@+id/win.gl.h.1"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/win.tv.msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_message"
            android:textSize="@dimen/mid_font"
            app:layout_constraintBottom_toTopOf="@+id/win.gl.h.3"
            app:layout_constraintEnd_toStartOf="@+id/win.gl.v.2"
            app:layout_constraintStart_toStartOf="@+id/win.gl.v.1"
            app:layout_constraintTop_toTopOf="@+id/win.gl.h.2" />

        <TextView
            android:id="@+id/win.tv.score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/challenge_score(data.CurrentScore)}"
            android:textSize="@dimen/mid_font"
            app:layout_constraintBottom_toTopOf="@+id/win.gl.h.4"
            app:layout_constraintEnd_toStartOf="@+id/win.gl.v.2"
            app:layout_constraintStart_toStartOf="@+id/win.gl.v.1"
            app:layout_constraintTop_toTopOf="@+id/win.gl.h.3"
            tools:text="@string/challenge_score" />

        <Button
            android:id="@+id/win.btn.back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_back"
            app:layout_constraintBottom_toTopOf="@+id/win.gl.h.5"
            app:layout_constraintEnd_toStartOf="@+id/win.gl.v.2"
            app:layout_constraintStart_toStartOf="@+id/win.gl.v.1"
            app:layout_constraintTop_toTopOf="@+id/win.gl.h.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>